# ski-dashboard

./: LICENSE
ski-dashboard/: README.md  pyproject.toml
ski-dashboard/scraper/: run_scraper.py
ski-dashboard/scraper/base/: scraper_base.py  selenium_driver.py
ski-dashboard/scraper/resorts/: models.py  verbier.py
